Fix form alignment

--- a/web/themes/ludvigs/assets/styles/sass/components/_forms.scss
+++ b/web/themes/ludvigs/assets/styles/sass/components/_forms.scss
@@ -9,12 +9,19 @@ form {
     margin: 3rem 0;
     border-radius: 2rem;
     padding: 3rem 0;
+    .js-form-wrapper {
+        width: 100%;
+        .js-form-item {
+            display: flex;
+        }
+    }
 
     input {
         padding: 0.75rem 1.25rem;
         border-radius: 2rem;
         border: 2px solid $white;
         margin-bottom: 1.5rem;
+        width: calc(100% - 5.5rem);
 
         &::placeholder {
             color: $main;
